# task_editor

./: .gitignore  CMakeLists.txt  README.md  TaskEditor-GUI  package.xml  rosdoc.yaml  view.rviz
config/: clean.yaml  down.yaml  led.yaml  lifter.yaml  marker.yaml  ps3-holonomic.config.yaml  ps3.config.yaml  scenario.yaml  test.yaml  up.yaml  vel.yaml  waypoints.yaml
doc/: manifest.yaml
doc/html/: README_8md.html  README_8md_source.html  TaskController_8cpp.html  TaskController_8cpp__incl.map  TaskController_8cpp__incl.md5  TaskController_8cpp_source.html  TaskController_8hh.html  TaskController_8hh__dep__incl.map  TaskController_8hh__dep__incl.md5  TaskController_8hh__incl.map  TaskController_8hh__incl.md5  TaskController_8hh_source.html  TaskController_8srv.html  TaskController_8srv_source.html  WaypointsEditor_8cpp.html  WaypointsEditor_8cpp__incl.map  WaypointsEditor_8cpp__incl.md5  WaypointsEditor_8cpp_source.html  annotated.html  classTaskController-members.html  classTaskController.html  classWaypoint__Edit-members.html  classWaypoint__Edit.html  classes.html  classstart_1_1FINISH-members.html  classstart_1_1FINISH.html  classstart_1_1FINISH__inherit__graph.map  classstart_1_1FINISH__inherit__graph.md5  classstart_1_1GO__TO__PLACE-members.html  classstart_1_1GO__TO__PLACE.html  classstart_1_1GO__TO__PLACE__inherit__graph.map  classstart_1_1GO__TO__PLACE__inherit__graph.md5  classstart_1_1INITIALIZE-members.html  classstart_1_1INITIALIZE.html  classstart_1_1INITIALIZE__inherit__graph.map  classstart_1_1INITIALIZE__inherit__graph.md5  classstart_1_1LIFTER-members.html  classstart_1_1LIFTER.html  classstart_1_1LIFTER__inherit__graph.map  classstart_1_1LIFTER__inherit__graph.md5  (+46 more)
doc/html/srv/: TaskController.html
launch/: ar_track_realsense.launch  joy.launch  make_map.launch  map_saver.launch  realsense_laser.launch  robot_bringup.launch  server.launch  simulation.launch  static_map.launch  view.launch  wheel_bringup.launch
scripts/: bringup.sh  gamepad_function.py  go.py  scp.exp  start.py  teleop_mover.sh
src/: TaskController.cpp  TaskController.hh  WaypointsEditor.cpp
srv/: TaskController.srv
www/: Mover.html
www/common/css/: style.css
www/js/: script.js
