<?xml version="1.0"?>
<package>
  <name>task_editor</name>
  <version>0.0.1</version>
  <description>The task_editor package</description>
  <maintainer email="y.shiigi@thk.co.jp">Yasuto Shiigi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>aero_std</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>aero_std</run_depend>

</package>
