<?xml version="1.0"?>
<package format="2">
  <name>task_editor</name>
  <version>0.0.2</version>
  <description>The task_editor package</description>
  <maintainer email="y.shiigi@thk.co.jp">Yasuto Shiigi</maintainer>
  <license>BSD</license>

  <author>Yasuto Shiigi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>message_generation</depend>

  <depend>seed_r7_ros_controller</depend>
  <depend>seed_r7_bringup</depend>
  <depend>seed_r7_navigation</depend>
  <depend>seed_r7_typef_moveit_config</depend>

</package>
